[package]
name = "oxigration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.11"
env_logger = "0.8.4"
indexmap = "1.9.3"
log = "0.4"
sqlparser = { version = "0.50.0", features = ["visitor"] }
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"

[[bin]]
name = "oxigration"
path = "src/main.rs"