[package]
name = "oxigration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.11"
env_logger = "0.8.4"
indexmap = "1.9.3"
log = "0.4"
sqlparser = { version = "0.50.0", features = ["visitor"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "tls-rustls-ring",
] }
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.2"

[[bin]]
name = "oxigration"
path = "src/main.rs"
